added bonus section to course page

--- a/html/cursoFisica.html
+++ b/html/cursoFisica.html
@@ -17,6 +17,7 @@
 			referrerpolicy="no-referrer"
 		/>
 		<link rel="stylesheet" href="../css/styles.css" />
+		<link rel="stylesheet" href="../css/utils.css" />
 		<link rel="stylesheet" href="../css/components/navbar.css" />
 		<link rel="stylesheet" href="../css/components/button.css" />
 		<link rel="stylesheet" href="../css/pages/cursoFisica.css" />
@@ -46,22 +47,22 @@
 
 		<main>
 			<section id="hero">
-				<div class="content">
-					<header>
-						<h1 class="hero-title">Quer aprender Física 1</h1>
-						<h1 class="hero-title">
-							Então pare de seguir as dicas genéricas
-						</h1>
-						<h1 class="hero-title">
-							que
-							<span class="hero-title orange"> só confundem</span>
-							mais ainda…
-						</h1>
-					</header>
+				<header>
+					<h1 class="hero-title">Quer aprender Física 1?</h1>
+					<h1 class="hero-title">
+						Então pare de seguir as dicas genéricas
+					</h1>
+					<h1 class="hero-title">
+						que
+						<span class="hero-title orange"> só confundem</span>
+						mais ainda…
+					</h1>
 					<p class="hero-description">
 						Aperte play que vou te explicar tudo neste vídeo de
 						apenas <strong>2 minutos:</strong>
 					</p>
+				</header>
+				<div class="content">
 
 					<iframe
 						width="720"
@@ -83,38 +84,38 @@
 			</section>
 
 			<section id="testimonials">
+				<header>
+					<h1 class="testimonials-title text-black">
+						Olha só o que os alunos estão falando sobre o
+					</h1>
+					<h1 class="testimonials-title text-orange">
+						Acelera Física 1:
+					</h1>
+				</header>
 				<div class="content">
-					<header>
-						<h1 class="testimonials-title">
-							Olha só o que os alunos estão falando sobre o
-						</h1>
-						<h1 class="testimonials-title orange">
-							Acelera Física 1:
-						</h1>
-					</header>
 					<div class="grid">
-						<div class="testimonials-card">
+						<div class="testimonials-card text-black">
 							Lorem ipsum dolor, sit amet consectetur adipisicing
 							elit. Explicabo dolorem ad blanditiis quibusdam
 							tempore aliquam in laudantium laboriosam maiores ex
 							eaque, quidem est quos hic minus. Numquam
 							accusantium explicabo distinctio?
 						</div>
-						<div class="testimonials-card">
+						<div class="testimonials-card text-black">
 							Lorem ipsum dolor, sit amet consectetur adipisicing
 							elit. Explicabo dolorem ad blanditiis quibusdam
 							tempore aliquam in laudantium laboriosam maiores ex
 							eaque, quidem est quos hic minus. Numquam
 							accusantium explicabo distinctio?
 						</div>
-						<div class="testimonials-card">
+						<div class="testimonials-card text-black">
 							Lorem ipsum dolor, sit amet consectetur adipisicing
 							elit. Explicabo dolorem ad blanditiis quibusdam
 							tempore aliquam in laudantium laboriosam maiores ex
 							eaque, quidem est quos hic minus. Numquam
 							accusantium explicabo distinctio?
 						</div>
-						<div class="testimonials-card">
+						<div class="testimonials-card text-black">
 							Lorem ipsum dolor, sit amet consectetur adipisicing
 							elit. Explicabo dolorem ad blanditiis quibusdam
 							tempore aliquam in laudantium laboriosam maiores ex
@@ -172,30 +173,87 @@
 					<div class="card">
 						<h2 class="card-title">📊 E finalmente...</h2>
 						<p class="card-description">
-							Você vai aprender, cinemática,
-							dinâmica, rotações… além de técnicas replicáveis
-							para interpretar e resolver questões de física de
-							maneira intuitiva.
+							Você vai aprender, cinemática, dinâmica, rotações…
+							além de técnicas replicáveis para interpretar e
+							resolver questões de física de maneira intuitiva.
 						</p>
 					</div>
 				</div>
 			</section>
 
 			<section id="bonus">
-				<h1 class="bonus-title">
-					Além disso, também vou te entregar 3 Bônus Especiais:
+				<h1 class="bonus-title text-black">
+					Além disso, também vou te entregar <span class="text-orange">3 Bônus Especiais:</span>
 				</h1>
 
-				cards de bonus aqui
+				<div class="content">
+					<div class="bonus card">
+						<h2 class="bonus card-title text-orange">
+							Bônus 1:
+						</h2>
+						<h2 class="bonus card-title text-black">
+							Como perder o medo de Física
+						</h2>
+
+						<p class="bonus card-description">
+							Muita gente trava só de ver um problema de Física,
+							achando que é algo impossível de entender. Neste
+							bônus, vou te mostrar um método simples e prático
+							para desenvolver confiança na hora de estudar e
+							resolver exercícios. Com estratégias que realmente
+							funcionam, você vai parar de ver a Física como um
+							bicho de sete cabeças e começar a enxergá-la como
+							algo lógico e acessível.
+						</p>
+					</div>
+
+					<div class="bonus card">
+						<h2 class="bonus card-title text-orange">
+							Bônus 2:
+						</h2>
+						<h2 class="bonus card-title text-black">
+							Mini curso de derivadas e integrais
+						</h2>
+						<p class="bonus card-description">
+							Se você quer mandar bem em Física no ensino
+							superior, precisa dominar cálculo! Para isso,
+							preparei um mini curso completo sobre derivadas e
+							integrais, explicando desde os conceitos básicos até
+							aplicações práticas nos problemas de Física. Com
+							esse conhecimento, você vai conseguir resolver
+							qualquer questão com muito mais tranquilidade e
+							segurança.
+						</p>
+					</div>
+
+					<div class="bonus card">
+						<h2 class="bonus card-title text-orange">
+							Bônus 3:
+						</h2>
+						<h2 class="bonus card-title text-black">
+							Resoluções de provas antigas
+						</h2>
+						<p class="bonus card-description">
+							Nada melhor do que praticar com questões reais,
+							certo? Além de um banco de provas antigas já
+							resolvidas, você também poderá me enviar provas da
+							sua universidade, e eu adicionarei as resoluções ao
+							curso. Assim, você estuda com exercícios que
+							realmente fazem parte da sua realidade acadêmica!
+						</p>
+					</div>
+				</div>
 			</section>
 
-			<div class="price-divider">
-				<h1 class="price-divider-title">
-					Tudo isso com um mega preço especial de R$ 97 por apenas R$
-					35,90
-				</h1>
-				<button class="price-divider-cta">Quero começar agora!</button>
-			</div>
+			<section class="price-divider">
+				<div class="content">
+					<h1 class="price-divider-title">
+						Tudo isso com um mega preço especial de R$ 97 por apenas R$
+						35,90
+					</h1>
+					<button class="price-divider-cta">Quero começar agora!</button>
+				</div>
+			</section>
 
 			<section id="target-public">
 				<h1 class="target-public-title">
