added price section

--- a/html/cursoFisica.html
+++ b/html/cursoFisica.html
@@ -63,7 +63,6 @@
 					</p>
 				</header>
 				<div class="content">
-
 					<iframe
 						width="720"
 						height="480"
@@ -75,9 +74,9 @@
 						allowfullscreen
 					></iframe>
 
-					<a class="hero-cta primary-btn"
-						>SIM! Quero dominar a Física!</a
-					>
+					<a href="" class="primary-btn" role="button">
+						SIM! Quero dominar a Física!
+					</a>
 
 					<i class="fa-solid fa-angles-down fa-2x"></i>
 				</div>
@@ -124,9 +123,9 @@
 						</div>
 					</div>
 
-					<button class="testimonials-cta primary-btn">
+					<a href="#" class="primary-btn" role="button">
 						Sim! Quero começar agora!
-					</button>
+					</a>
 				</div>
 			</section>
 
@@ -183,14 +182,13 @@
 
 			<section id="bonus">
 				<h1 class="bonus-title text-black">
-					Além disso, também vou te entregar <span class="text-orange">3 Bônus Especiais:</span>
+					Além disso, também vou te entregar
+					<span class="text-orange">3 Bônus Especiais:</span>
 				</h1>
 
 				<div class="content">
 					<div class="bonus card">
-						<h2 class="bonus card-title text-orange">
-							Bônus 1:
-						</h2>
+						<h2 class="bonus card-title text-orange">Bônus 1:</h2>
 						<h2 class="bonus card-title text-black">
 							Como perder o medo de Física
 						</h2>
@@ -208,9 +206,7 @@
 					</div>
 
 					<div class="bonus card">
-						<h2 class="bonus card-title text-orange">
-							Bônus 2:
-						</h2>
+						<h2 class="bonus card-title text-orange">Bônus 2:</h2>
 						<h2 class="bonus card-title text-black">
 							Mini curso de derivadas e integrais
 						</h2>
@@ -227,9 +223,7 @@
 					</div>
 
 					<div class="bonus card">
-						<h2 class="bonus card-title text-orange">
-							Bônus 3:
-						</h2>
+						<h2 class="bonus card-title text-orange">Bônus 3:</h2>
 						<h2 class="bonus card-title text-black">
 							Resoluções de provas antigas
 						</h2>
@@ -245,13 +239,16 @@
 				</div>
 			</section>
 
-			<section class="price-divider">
+			<section id="price-divider">
 				<div class="content">
 					<h1 class="price-divider-title">
-						Tudo isso com um mega preço especial de R$ 97 por apenas R$
-						35,90
+						Tudo isso com um mega preço especial de <span class="line-through">R$395,90</span> por apenas
+						<span class="text-orange">R$197,00!</span>
 					</h1>
-					<button class="price-divider-cta">Quero começar agora!</button>
+
+					<a href="#" class="primary-btn" role="button">
+						Sim! Quero começar agora!
+					</a>
 				</div>
 			</section>
 
