added target audience section

--- a/html/cursoFisica.html
+++ b/html/cursoFisica.html
@@ -54,7 +54,7 @@
 					</h1>
 					<h1 class="hero-title">
 						que
-						<span class="hero-title orange"> só confundem</span>
+						<span class="hero-title text-orange"> só confundem</span>
 						mais ainda…
 					</h1>
 					<p class="hero-description">
@@ -142,10 +142,12 @@
 			</section>
 
 			<section id="course-details">
-				<h1 class="course-details-title">
-					No Mapa do YouTube você vai aprender o que realmente
-					funciona para crescer no YouTube:
-				</h1>
+				<header>
+					<h1 class="course-details-title">
+						No Acelera Física 1 você vai aprender o que
+					</h1>
+					<h1 class="course-details-title text-orange">realmente funciona:</h1>
+				</header>
 				<div class="content">
 					<div class="card">
 						<h2 class="card-title">🔬 Primeiro...</h2>
@@ -181,10 +183,12 @@
 			</section>
 
 			<section id="bonus">
-				<h1 class="bonus-title text-black">
-					Além disso, também vou te entregar
-					<span class="text-orange">3 Bônus Especiais:</span>
-				</h1>
+				<header>
+					<h1 class="bonus-title text-black">
+						Além disso, também vou te entregar
+					</h1>
+					<h1 class="text-orange bonus-title">3 Bônus Especiais:</h1>
+				</header>
 
 				<div class="content">
 					<div class="bonus card">
@@ -242,7 +246,8 @@
 			<section id="price-divider">
 				<div class="content">
 					<h1 class="price-divider-title">
-						Tudo isso com um mega preço especial de <span class="line-through">R$395,90</span> por apenas
+						Tudo isso com um mega preço especial de
+						<span class="line-through">R$395,90</span> por apenas
 						<span class="text-orange">R$197,00!</span>
 					</h1>
 
@@ -252,12 +257,61 @@
 				</div>
 			</section>
 
-			<section id="target-public">
-				<h1 class="target-public-title">
-					O Mapa do YouTube foi feito especialmente para você que...
+			<section id="target-audience">
+				<h1 class="target-audience-title text-black">
+					O Acelera Física 1 foi feito especialmente para você que...
 				</h1>
 
-				cards de público alvo aqui
+				<div class="content">
+					<div class="target-audience-card">
+						<i class="fa-regular fa-compass fa-3x text-orange"></i>
+
+						<p class="target-audience-description">
+							Se sente perdido em Física 1 e quer um método claro
+							e direto para aprender sem enrolação.
+						</p>
+					</div>
+
+					<div class="target-audience-card">
+						<i
+							class="fa-solid fa-puzzle-piece fa-3x text-orange"
+						></i>
+						<p class="target-audience-description">
+							Tem dificuldade com cálculos e fórmulas, mas quer
+							entender a lógica por trás dos problemas para
+							resolver qualquer questão com confiança.
+						</p>
+					</div>
+
+					<div class="target-audience-card">
+						<i class="fa-solid fa-book fa-3x text-orange"></i>
+						<p class="target-audience-description">
+							Vai fazer provas e quer se preparar da melhor forma,
+							aprendendo com resoluções comentadas e exercícios
+							práticos.
+						</p>
+					</div>
+
+					<div class="target-audience-card">
+						<i class="fa-solid fa-stopwatch fa-3x text-orange"></i>
+						<p class="target-audience-description">
+							Quer economizar tempo e evitar frustrações,
+							estudando com um material estruturado e focado no
+							que realmente importa.
+						</p>
+					</div>
+
+					<div class="target-audience-card">
+						<i
+							class="fa-solid fa-ruler-combined fa-3x text-orange"
+						></i>
+						<p class="target-audience-description">
+							Precisa de um reforço em cálculo e quer um mini
+							curso de derivadas e integrais para mandar bem nas
+							matérias de Física do ensino superior.
+						</p>
+					</div>
+				</div>
 			</section>
 
 			<section id="about">
