--- a/html/cursoFisica.html
+++ b/html/cursoFisica.html
@@ -418,8 +418,8 @@
 						<h2 class="original-price">
 							De: <span class="line-through">R$ 395,00</span>
 						</h2>
-						<h2 class="current-price">Por apenas:</h2>
-						<h1 class="price text-orange">R$ 197,00</h1>
+						<h2 class="current-price">Por até 12x de:</h2>
+						<h1 class="price text-orange"> R$20,37</h1>
 						<div>
 							<p class="price-description">
 								- Pagamento 100% <span>seguro</span>
