--- a/html/index.html
+++ b/html/index.html
@@ -151,7 +151,7 @@
 								estudantes de todas as áreas exatas, de qualquer
 								universidade do Brasil.
 							</p>
-							<a href="/html/cursoFisica.html" class="primary-btn course-cta">
+							<a href="/acelerafisica" class="primary-btn course-cta">
 								Quero minha aprovação!
 							</a>
 						</article>
